@@ -1,3 +1,7 @@
+2002-12-16	Joel Sherrill <joel@OARcorp.com>
+
+	* milli/milli.S: Per PR329, use GNU binutils assembler directives.
+
 2002-12-06	Ralf Corsepius <corsepiu@faw.uni-ulm.de>
 
 	* configure.ac: Remove RTEMS_CHECK_BSP_CACHE.
